RESOLVED FIXED76391
Crash at WebCore::MediaControlRootElement::makeOpaque + 97
https://bugs.webkit.org/show_bug.cgi?id=76391
Summary Crash at WebCore::MediaControlRootElement::makeOpaque + 97
Jer Noble
Reported 2012-01-16 09:52:04 PST
Crash at WebCore::MediaControlRootElement::makeOpaque + 97
Attachments
Patch (1.62 KB, patch)
2012-01-16 09:57 PST, Jer Noble
no flags
Patch (1.94 KB, patch)
2012-01-19 09:01 PST, Jer Noble
sullivan: review+
Jer Noble
Comment 1 2012-01-16 09:52:39 PST
Jer Noble
Comment 2 2012-01-16 09:57:04 PST
Daniel Bates
Comment 3 2012-01-17 09:32:22 PST
Comment on attachment 122659 [details] Patch This patch needs to be rebased as it no longer applies cleanly because the function MediaControlRootElement::makeOpaque() has changed significantly. In particular, the line this patch changes no longer exists as it was removed in <http://trac.webkit.org/changeset/97157> (bug #58157). This changeset also moved the implementation of MediaControlRootElement::makeOpaque() into MediaControlPanelElement::makeOpaque() in file /Source/WebCore/html/shadow/MediaControlElements.cpp: <http://trac.webkit.org/browser/trunk/Source/WebCore/html/shadow/MediaControlElements.cpp?rev=105163#L207>.
Jer Noble
Comment 4 2012-01-19 09:01:22 PST
Created attachment 123139 [details] Patch Rebased against new location of makeOpaque() code.
John Sullivan
Comment 5 2012-01-19 10:16:29 PST
Comment on attachment 123139 [details] Patch Is the case where document()->page() is nil ever expected? If not, maybe it’s worth adding an assertion?
Jer Noble
Comment 6 2012-01-19 10:23:06 PST
(In reply to comment #5) > (From update of attachment 123139 [details]) > Is the case where document()->page() is nil ever expected? If not, maybe it’s worth adding an assertion? In the Document.h header, it states that page() "can be NULL", so I assumed it was expected. Thanks!
Jer Noble
Comment 7 2012-01-19 10:53:54 PST
Note You need to log in before you can comment on or make changes to this bug.