Crash at WebCore::MediaControlRootElement::makeOpaque + 97 https://bugs.webkit.org/show_bug.cgi?id=76391

Reviewed by John Sullivan.

No new tests; Speculative fix for crash.

Crash report data suggests this crash is occurring as the document is being
closed.  Check the nullity of document()->page() before deref-ing.

* html/shadow/MediaControlElements.cpp:
(WebCore::MediaControlPanelElement::makeOpaque):

Canonical link: https://commits.webkit.org/93469@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@105425 268f45cc-cd09-0410-ab3c-d52691b4dbfc